[package]
name = "portal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx           = { version = "0.4.2", default-features = false, features = ["runtime-tokio-native-tls",  "macros", "uuid", "postgres", "chrono", "tls"] }
tokio          = { version = "0.2.22", features = ["macros"] }
serde_json     = "1.0.59"
serde          = { version = "1.0.117", features = ["derive"] }
dotenv         = "0.15.0"
anyhow         = "1.0.33"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
syn            = "=1.0.59"
reqwest        = { version = "0.10.8", features = ["json"] }
futures        = "0.3.7"
async-trait    = "0.1.41"
thiserror = "1.0.20"